# antlr4-polynomial-calculator

./: CMakeLists.txt  CalculatorInterpreter.cpp  README.md  TLexer.g4  TParser.g4  example.txt  main.cpp
include/: CalculatorInterpreter.h  hashtable.h  iterator.h  monom.h  orderedmaplist.h  orderedmapvector.h  polynom.h  tpair.h  tsinglelinkedlist.h  ttable.h  unorderedmaplist.h  unorderedmapvector.h  vector.h
samples/: sample_polynom.cpp
test/: CMakeLists.txt  test_iterator.cpp  test_list.cpp  test_monom.cpp  test_polynom.cpp
